# bazel_bindings

./: Cargo.toml  MODULE.bazel  README.md  WORKSPACE  build.rs
examples/math_example/: Cargo.toml  README.md  build.rs
examples/math_example/src/: main.rs
src/: lib.rs
src/math/: BUILD  math.cc  math.h
src/rust/: BUILD  math_bindings.rs
